--- a/index.html
+++ b/index.html
@@ -39,18 +39,17 @@
 <body>
     <div class="container">
         <h1>欢迎来到我的个人主页</h1>
-        <p>这里是简单介绍。你可以讲讲你是谁，你做什么，以及你的兴趣爱好。</p>
+        <p>集美貌与才华于一身的金牌讲师！。</p>
 
         <h2>关于我</h2>
-        <p>这部分是更详细的自我介绍。你可以提及你的教育背景，工作经验，以及你认为对别人了解你很重要的事情。</p>
+        <p>我是小许老师！</p>
 
         <h2>兴趣爱好</h2>
         <p>这里可以列出你的一些兴趣爱好，比如阅读、旅游、摄影等等。</p>
 
         <div class="contact-info">
             <h2>联系方式</h2>
-            <p>电子邮箱：Null</p>
-            <p>LinkedIn：Null</p>
+            <p>电子邮箱：有事找我助理小高！</p>
         </div>
     </div>
 </body>
